1. Integrated location service to get location 2. Implemented openweather api to get location based weather data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">WeatherApp</string>
+    <string name="need_location">NEED YOUR LOCATION</string>
+    <string name="need_location_desc">WeatherApp determines your phone\'s location in order to provide weather updates to you. This allows for a better overall app experience.</string>
 </resources>
