--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">WeatherApp</string>
     <string name="need_location">NEED YOUR LOCATION</string>
     <string name="need_location_desc">WeatherApp determines your phone\'s location in order to provide weather updates to you. This allows for a better overall app experience.</string>
+    <string name="Empty">Empty</string>
+    <string name="degree">\u00B0C</string>
+    <string name="error">Sorry, could not get weather data.</string>
 </resources>
