1. Wrote unit test for current weather data service

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="Empty">Empty</string>
     <string name="degree">\u00B0C</string>
     <string name="error">Sorry, could not get weather data.</string>
+    <string name="try_again">TRY AGAIN</string>
+    <string name="error_location">Couldn\'t get your location.</string>
 </resources>
